--- a/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
@@ -117,8 +117,8 @@
                     <!--</button>-->
                     <h3 class="h6 mb-2 fs-base">
                       <a class="nav-link" href="#" data-bs-toggle="offcanvas"
-                         (click)="item.orderDetail.orderDetailType==='Item'?getItemSelected(item):''"
-                         [attr.data-bs-target]="item.orderDetail.orderDetailType==='Item'?'#item-viewer-g':item.orderDetail.orderDetailType==='ItemPackage'?'#item-detail-viewer-g':''"
+                         (click)="item.orderDetail.orderDetailType==='Item'?getItemSelected(item):item.orderDetail.orderDetailType==='ItemPackage'?getItemPackageSelected(item):''"
+                         [attr.data-bs-target]="item.orderDetail.orderDetailType==='Item'?'#item-viewer-g':item.orderDetail.orderDetailType==='ItemPackage'?'#item-package-viewer-g':''"
                          style="font-weight: bold;padding-left: 10px">
                         {{item.name}}
                       </a>
