--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -2,7 +2,10 @@
 <div class="offcanvas offcanvas-end" id="item-viewer" style="width:50rem;">
   <div class="offcanvas-header d-block border-bottom">
     <div class="d-flex align-items-center justify-content-between">
-      <h2 class="h5 mb-0">{{item.name}}</h2>
+      <div style="display: flex">
+        <h2 class="h5 mb-0" style="margin-right: 15px">{{item.name}}</h2>
+        <span class="badge rounded-pill bg-info" style="padding-top: 7px"> Item </span>
+      </div>
       <button class="btn-close" type="button" data-bs-dismiss="offcanvas"></button>
     </div>
 
