--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -116,3 +116,4 @@
 
 <app-shop-cart></app-shop-cart>
 <app-item-detail-view></app-item-detail-view>
+<app-item-package-detail-view></app-item-package-detail-view>
