--- a/Frontend/src/app/app-customer/view/search-result/search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/search-result.component.html
@@ -121,3 +121,4 @@
 
 <app-shop-cart></app-shop-cart>
 <app-item-detail-view></app-item-detail-view>
+<app-item-package-detail-view></app-item-package-detail-view>
