--- a/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
@@ -178,7 +178,7 @@
                             <div *ngIf="item.quantity===-1"
                                  style="border-right: 1px solid #d3d3d3;display: grid;justify-content: center;align-content: center;height: 100%">
                               <p class="mb-2 fw-bold mx-2" style="text-align: center;color: #d48f03">
-                                Make On Delivery
+                                Make To Order
                               </p>
                             </div>
                           </div>
