--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -321,11 +321,15 @@
   <!--</div>-->
   <div class="offcanvas-footer border-top" style="display: block;">
     <ul class="nav nav-tabs justify-content-end" role="tablist">
-      <!--<li class="nav-item me-2">-->
-        <!--<button class="btn btn-icon btn-success btn-lg text-light shadow-sm rounded-circle" type="button"-->
-                <!--data-bs-toggle="tooltip" title="Add to Cart">-->
-          <!--<i class="fi-cart"></i></button>-->
-      <!--</li>-->
+      <li class="nav-item me-2" *ngIf="itemPackageObj.cart!==undefined" style="display: flex">
+        <button class="btn btn-icon btn-success btn-lg text-light shadow-sm rounded-circle" type="button"
+                data-bs-toggle="tooltip" title="Add to Cart" (click)="addToCart()">
+          <i class="fi-cart" style="padding-top: 2px"></i></button>
+        <div *ngIf="itemPackageObj.itemPackage.orderDetail.quantity>0"
+             style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 8px;margin-left: 8px;font-weight: bold">
+          {{itemPackageObj.itemPackage.orderDetail.quantity}}
+        </div>
+      </li>
       <li class="nav-item me-2" *ngIf="itemPackageObj.backBtn!==undefined">
         <a class="btn btn-md btn-outline-info" [attr.data-bs-target]="'#'+itemPackageObj.backBtn"
            data-bs-toggle="offcanvas"
