--- a/Frontend/src/app/view/header/header.component.html
+++ b/Frontend/src/app/view/header/header.component.html
@@ -37,6 +37,12 @@
         in</span
     ></a
     >
+    <a
+      class="btn btn-primary btn-sm ms-2 order-lg-3"
+      [routerLink]="''"
+    ><i class="fi-home me-2"></i>Home</a
+    >
+
     <div class="collapse navbar-collapse order-lg-2" id="navbarNav">
       <ul class="navbar-nav navbar-nav-scroll" style="max-height: 35rem">
         <li class="nav-item d-lg-none">
