--- a/Frontend/src/app/app-customer/view/customer-register/cr-step5/cr-step5.component.html
+++ b/Frontend/src/app/app-customer/view/customer-register/cr-step5/cr-step5.component.html
@@ -22,10 +22,10 @@
 </div>
 
 <div class="d-flex flex-column flex-sm-row bg-light rounded-3 p-4 px-md-5">
-  <button type="button" class="btn btn-primary btn-lg rounded-pill"
-          (click)="previousPage()">
-    <i class="fi-chevron-left fs-sm"></i> Previous step
-  </button>
+  <!--<button type="button" class="btn btn-primary btn-lg rounded-pill"-->
+          <!--(click)="previousPage()">-->
+    <!--<i class="fi-chevron-left fs-sm"></i> Previous step-->
+  <!--</button>-->
   <button type="submit" class="btn btn-primary btn-lg rounded-pill ms-sm-auto"
           [routerLink]="'/login'">
     Finish
