--- a/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
+++ b/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
@@ -19,8 +19,12 @@
           class="dropdown-item fs-base fw-bold" href="#">Frankfurt am Main</a><a class="dropdown-item fs-base fw-bold"
                                                                                  href="#">Stuttgart</a><a
           class="dropdown-item fs-base fw-bold" href="#">Cologne</a></span></span></h1>
-        <p class="text-lg-start text-center mb-4 mb-lg-5 fs-lg">Find great places to stay, eat, shop, or visit from our
+        <p class="text-lg-start text-center mb-2 mb-lg-3 fs-lg">Find great places to stay, eat, shop, or visit from our
           partners and local experts.</p>
+        <div class="btn-group mb-3" role="group" aria-label="Outline button group">
+          <button type="button" class="btn btn-outline-primary active">Item</button>
+          <button type="button" class="btn btn-outline-primary">Shop</button>
+        </div>
         <!-- Search form-->
         <div class="me-lg-n5">
 
