--- a/Frontend/src/app/app-customer/view/customer-register/customer-register.component.html
+++ b/Frontend/src/app/app-customer/view/customer-register/customer-register.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="container mt-5 mb-md-4 py-5">
   <!-- Page content-->
   <div class="row justify-content-center pb-sm-2">
